fixed some contrast issues

--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ h2, h3 {
     text-transform: uppercase;
     margin: 8px auto 40px;
     padding: 5px;
-    color: white;
+    color: #FCF8EC;
 }
 
 .sub-heading {
@@ -50,11 +50,11 @@ h4 {
     font-size: 17px;
     text-transform: uppercase;
     margin: 20px 0 15px;
-    color: #417D7A;
+    color: var(--heading);
     display: inline;
 }
 .name-heading {
-    color: #FFF;
+    color: #FCF8EC;
 }
 .header-h2 {
     text-transform: lowercase;
@@ -68,7 +68,7 @@ h5 {
 }
 h6 {
     font-size: 17px;
-    color: #417D7A;
+    color: var(--heading);
 }
 p {
     display: inline-block;
@@ -79,7 +79,7 @@ p {
 }
 
 .date {
-    color: #417D7A;
+    color: var(--heading);
 }
 .hero {
     background-image: linear-gradient(rgba(82, 81, 81, 0.5), rgba(0, 0, 0, 0.5)), url(./images/hero-img.jpg);
@@ -119,19 +119,7 @@ p {
     filter: invert(17%) sepia(44%) saturate(591%) hue-rotate(138deg) brightness(21%) contrast(89%);
 
 }
-svg rect {
-    fill:#1A3C40;
-}
-.linkedin {
-    background-image: url(./images/linkedin.svg)
-}
-.github {
-    background-image: url(./images/github.svg);
-}
 
-.stackoverflow {
-    background-image: url(./images/stackoverflow.svg)
-}
 .portrait-img {
     border-radius: 50%;
     border: solid white 2px;
@@ -214,9 +202,10 @@ display: flex;
 .overlay-text {
     position: absolute;
     top: 40%;
-    left: 35%;
+    left: 30%;
     color: var(--primary);
-    
+    font-size: 2rem;
+ 
 }
 
 .other-wrapper {
@@ -269,7 +258,7 @@ li {
 
 .tag-wrapper p {
     font-family: "Roboto", sans-serif;
-    color: var(--primary);
+    color: #FFFFFF;
     font-weight: bold;
     background-color: var(--ligtherGreen);
     text-decoration: none;
